Changes for 1.6.3

 - [ZBX-718] fixed web graphs start time not changing (Vedmak)
 - [ZBX-699] fixed recursion detection in Include directive for config files (Sasha)
 - [ZBX-301] fixed minor GUI text errors  (Vedmak)
 - [ZBX-716] fixed wrong caption for graph item editing form (Vedmak)
 - [ZBX-717] all templates linked to group Templates in default config (Sasha)
 - [ZBX-715] fixed "Invalid URL" error when choose History from history submenu (Vedmak)
 - [ZBX-713] fixed "values per second" having too many decimal places (Vedmak)
 - [ZBX-710] fixed duplicating entries in hosts groups after import (Artem)
 - [ZBX-709] improved item graph exporting (Artem)
 - [ZBX-712] fixed simple/advanced item filter switch (Vedmak)
 - [ZBX-707] fixed sql error when filter items by host group (Vedmak)
 - [ZBX-706] fixed element validation in sysmap elements (Artem)
 - [ZBX-705] improved {ESC.HISTORY} macro in recovery notifications (Sasha)
 - [ZBX-647] fixed audit log record for graph update action "added" -> "updated" (Vedmak)
 - [ZBX-700] fixed possible server crash when using {TRIGGER.NAME} for notifications (Sasha)
 - [DEV-286] improved zabbix main menu (Artem)
 - [ZBX-311] fixed PostgreSQL errors with out of range string data (Sasha)
 - [ZBX-696] fixed import of triggers with {HOSTNAME} macro (Sasha)
 - [ZBX-677] fixed handling of -c parameter in zabbix_sender. Thanks to Jakov Sosic (Sasha)
 - [ZBX-693] fixed timeout handling for SNMP connect (Sasha)
 - [ZBX-690] fixed memory leak if trigger evaluation fails (Sasha)
 - [DEV-285] added configurable the first dropdown selection (Artem)
 - [ZBX-689] allowed processing of non-agent based checks for unreachable hosts (Sasha)
 - [ZBX-683] removed "Step" field for recovery messages from Event details (Sasha)
 - [ZBX-680] fixed login while entering any page with HTTP auth enabled (Artem)
 - [ZBX-678] default number of HTTP pollers was decreased to one (Sasha)
 - [ZBX-676] fixed sql problem with deletion of many hosts (Artem)